Updated remote.scss to fix inline block spacing

--- a/src/main/webapp/scss/main/remote.scss
+++ b/src/main/webapp/scss/main/remote.scss
@@ -140,6 +140,7 @@ $optionSize: 36px;
     color: #FFF;
     position: fixed;
     @include dropShadow;
+    font-size: 0px;
 
     .echoed-story{
         display: inline-block;
